[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-performance-indicator"
version = "0.0.1"
description = "A machine learning project to predict student's performance"
authors = [{name = "Mansy", email = "mansy.soroush@gmail.com"}]
dependencies = [
    "ipykernel",
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "catboost",
    "xgboost",
    "Flask",
    "dill"
]
